scripts/tests/errors/err_deeply_nested_parens.bu
// Test: deeply nested parentheses - compiler recursion depth
// Expected: compile error or handled gracefully, not stack overflow crash

var x = ((((((((((((((((((((((((((((((((((((((((((((((((((1))))))))))))))))))))))))))))))))))))))))))))))))))))))
